<resources>
    <string name="app_name">Personal Pins</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="board_error">Problem loading boards</string>
    <string name="pin_error">Problem loading pins</string>
    <string name="add_boards">Add some boards</string>
    <string name="add_pin">Add Pin</string>
    <string name="tags">#Tags</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="action_save">Save</string>
    <string name="pin_name">Pin Name</string>
    <string name="pin_tags">Pin Tags</string>
    <string name="save">Save</string>
    <string name="change_pin">Change Pin</string>
    <string name="expand_view">expandViewTransition</string>
    <string name="add_board">Add Board</string>
</resources>
