<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="au.com.wsit.project11.ui.MainActivity">
    <item
        android:icon="@mipmap/ic_action_add_box"
        android:id="@+id/action_add_board"
        android:orderInCategory="100"
        android:title="@string/add_board"
        app:showAsAction="always"/>
    <item
        android:icon="@mipmap/ic_camera"
        android:id="@+id/action_start_camera"
        android:orderInCategory="200"
        android:title="@string/add_pin"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
