<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="au.com.wsit.project11.ui.AddPinActivity">

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/pinImageView"
            android:scaleType="center"
            android:src="@drawable/asset1"
            android:layout_width="170dp"
            android:layout_height="256dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <EditText
        android:hint="@string/title"
        android:layout_gravity="center_horizontal"
        android:id="@+id/pinTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/comment"
        android:layout_gravity="center_horizontal"
        android:id="@+id/pinComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <EditText
            android:textSize="18sp"
            android:hint="@string/tags"
            android:layout_gravity="center_horizontal"
            android:id="@+id/pinTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/boardRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>

</ScrollView>
